cmake_minimum_required(VERSION 3.28)
project(untitled9)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled9 main.cpp)
add_executable(forloop forloop.cpp)
add_executable(ifquestion1 ifquestion1.cpp)
add_executable(ifquestion2 ifquestion2.cpp)
add_executable(ifquestion5 ifquestion5.cpp)
add_executable(ifquestion4 ifquestion4.cpp)
add_executable(taxquestion taxquestion.cpp)